# sysmon-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
sysmon/: cli.py  monitor.py
tests/: test_monitor.py
